; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_vid_pollux.c_gp2x_video_wait_vsync_.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_vid_pollux.c_gp2x_video_wait_vsync_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@memregl = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @gp2x_video_wait_vsync_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gp2x_video_wait_vsync_() #0 {
  br label %1

1:                                                ; preds = %8, %0
  %2 = load i32*, i32** @memregl, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 3107
  %4 = load i32, i32* %3, align 4
  %5 = and i32 %4, 1024
  %6 = icmp ne i32 %5, 0
  %7 = xor i1 %6, true
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @spend_cycles(i32 128)
  br label %1

10:                                               ; preds = %1
  %11 = load i32*, i32** @memregl, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 3107
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, 1024
  store i32 %14, i32* %12, align 4
  ret void
}

declare dso_local i32 @spend_cycles(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
